Fix menu collapse

--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -14,7 +14,12 @@ a {
 .aris-nav li {
   text-align: center;
 }
-@media (max-width: 880px) {
+@media (max-width: 767px) {
+	.aris-nav li {
+	  text-align: left;
+	}
+}
+@media (min-width: 768px) and (max-width: 880px) {
   .nav-name {
     display: none !important;
   }
